Use HTTPS instead of HTTP to resolve dependencies
This fixes a security vulnerability in this project where the `pom.xml`
files were configuring Maven to resolve dependencies over HTTP instead of
HTTPS.

Signed-off-by: Jonathan Leitschuh <Jonathan.Leitschuh@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <repository>
             <id>ice-maven-release</id>
             <name>Ice Maven Release Repository</name>
-            <url>http://anonsvn.icesoft.org/repo/maven2/releases</url>
+            <url>https://anonsvn.icesoft.org/repo/maven2/releases</url>
         </repository>
         <repository>
             <id>snapshots-repo</id>
